[char 2]完成简单的列表展示，当时当前遇到控制器不能被识别的问题

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>5.2.6.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
 
     </dependencies>
 
